修复zip处理以及修复冲突SN码